--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".sample.emojilist.MainActivity"
-            android:theme="@style/MainActivityTheme">
+            android:name=".sample.emojilist.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
