--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,9 @@ dependencies {
     compile "com.squareup.retrofit2:adapter-rxjava:$rootProject.retrofitVersion"
 
     //picture
-    compile "com.github.bumptech.glide:glide:$rootProject.glideVersion"
+//    compile "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     compile "com.facebook.fresco:fresco:$rootProject.frescoVersion"
+//    compile "com.facebook.fresco:imagepipeline-okhttp3:$rootProject.frescoVersion"
     // 支持 GIF 动图，需要添加
     compile "com.facebook.fresco:animated-gif:$rootProject.frescoVersion"
 
