--- a/ImageLib/build.gradle
+++ b/ImageLib/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     compile "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     compile "com.pnikosis:materialish-progress:$rootProject.progressVersion"
+
+    compile 'pub.devrel:easypermissions:1.0.0'
+
 }
